stderr
JudgeMan.java:60: error: cannot find symbol
            if (intArray[i] != intArray[i - 1] + 1){
                ^
  symbol:   variable intArray
  location: class JudgeMan
JudgeMan.java:60: error: cannot find symbol
            if (intArray[i] != intArray[i - 1] + 1){
                               ^
  symbol:   variable intArray
  location: class JudgeMan
2 errors
